# AI-racing-simulation-pkg

./: .gitmodules  README.md
docs/: TODO_memo.md  howtouse_gitsubmodule.md  package_tree.md  troubleshooting_issues.md
erp42_gazebo/: README.md
erp42_gazebo/erp42_gazebo_control/: CMakeLists.txt
erp42_gazebo/erp42_gazebo_control/config/: ctrl_ackermann_steering_controller.yaml  ctrl_steer_bot_hardware_gazebo.yaml
erp42_gazebo/erp42_gazebo_control/launch/: control.launch
erp42_gazebo/erp42_gazebo_control/scripts/: delay_publish.py
erp42_gazebo/erp42_gazebo_manager/: CMakeLists.txt  package.xml
erp42_gazebo/erp42_gazebo_manager/launch/: erp42_sim_manager.launch
erp42_gazebo/erp42_gazebo_manager/scripts/: erp42_sim_manager.py
erp42_gazebo/erp42_hardware_gazebo/config/: steer_bot_hardware_gazebo.yaml
erp42_gazebo/erp42_vehicle_description/urdf/: erp42_vehicle.urdf.xacro  wheel.xacro
erp42_gazebo/erp42_vehicle_gazebo/: package.xml
erp42_gazebo/erp42_vehicle_gazebo/launch/: erp42_gazebo_sim.launch  erp42_gazebo_sim_multi.launch  erp42_gazebo_sim_single.launch  erp42_gazebo_single_vehicle.launch  erp42_gazebo_track.launch  erp42_gazebo_vehicles.launch  erp42_navigation_competetion.launch  erp42_navigation_competetion_team1.launch  erp42_navigation_competetion_team2.launch  erp42_navigation_demo.launch  erp42_navigation_multi.launch  erp42_navigation_multi_w_delay.launch
erp42_gazebo/erp42_vehicle_gazebo/maps/: sunmoon.yaml
erp42_navigation_demo/: CMakeLists.txt  README.md  package.xml
erp42_navigation_demo/erp42_navigation/: CMakeLists.txt  README.md  package.xml
erp42_navigation_demo/erp42_navigation/launch/: erp42_PurePursuit_local_planner.launch  erp42_dwa_local_planner.launch  erp42_regulated_pure_pursuit_planner.launch  erp42_teb_local_planner_sunmoon.launch  move_base.launch
erp42_navigation_demo/erp42_navigation/params/costmap/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
erp42_navigation_demo/erp42_navigation/params/multi_vehicle/erp42_1/costmap/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
erp42_navigation_demo/erp42_navigation/params/multi_vehicle/erp42_1/costmap/with_delay/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
erp42_navigation_demo/erp42_navigation/params/multi_vehicle/erp42_2/costmap/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
erp42_navigation_demo/erp42_navigation/params/multi_vehicle/erp42_2/costmap/with_delay/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
erp42_navigation_demo/erp42_navigation/params/planner/: pure_pursuit_planner_params.yaml  regulated_pure_pursuit_planner_params.yaml  regulated_pure_pursuit_planner_params_team1.yaml  regulated_pure_pursuit_planner_params_team2.yaml
erp42_navigation_demo/erp42_navigation/rviz/: purepursuit_planner_rviz.rviz  regulated_purepursuit_planner_rviz.rviz  regulated_purepursuit_planner_vf_rviz.rviz  teb_planner_rviz.rviz
erp42_navigation_demo/launch/: erp42_PurePursuit_local_planner.launch  erp42_dwa_local_planner.launch  erp42_regulated_pure_pursuit_planner.launch  erp42_teb_local_planner_sunmoon.launch  move_base.launch
erp42_navigation_demo/params/costmap/: costmap_common_params.yaml  global_costmap_params.yaml
erp42_navigation_demo/params/planner/: regulated_pure_pursuit_planner_params.yaml  teb_local_planner_params.yaml
erp42_navigation_demo/path_extraction/: CMakeLists.txt  package.xml
erp42_navigation_demo/path_extraction/config/: movebase_follower.yaml  path_extraction.yaml
erp42_navigation_demo/path_extraction/launch/: run_PathExtraction.launch  run_movebase_follwer.launch  run_param_reconfig.launch
erp42_navigation_demo/path_extraction/path/: sunmoon_sim_center.txt  sunmoon_sim_center_erp42_2.txt  sunmoon_sim_manual.txt
erp42_navigation_demo/path_extraction/rviz/: pathextraction_map.rviz
erp42_navigation_demo/path_extraction/scripts/: kalman_filter.py  movebase_follower.py  param_reconfig.py  path_extraction.py  path_extraction_node.py  rank_server.py  referee_server.py
erp42_navigation_demo/path_extraction/scripts/lib/: utils.py
erp42_navigation_demo/path_extraction/srv/: ResetAndRestore.srv  StartRacing.srv
erp42_navigation_demo/regulated_pure_pursuit_controller/include/regulated_pure_pursuit_controller/: regulated_pure_pursuit_controller.h
erp42_navigation_demo/regulated_pure_pursuit_controller/src/: regulated_pure_pursuit_controller.cpp
erp42_navigation_demo/rviz/: regulated_purepursuit_planner_rviz.rviz
multibot_custom_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
multibot_custom_layer/cfg/: InflationPlugin.cfg
multibot_custom_layer/src/: multibot_custom_layer.cpp
multibot_layer/: CMakeLists.txt  costmap_plugins.xml
multibot_layer/cfg/: OvertakePlugin.cfg  PathPlugin.cfg
multibot_layer/src/: multibot_layer.cpp  overtake_layer.cpp  path_layer.cpp
predict_dyn_obs_path/: CMakeLists.txt  package.xml
predict_dyn_obs_path/msg/: Trajectory.msg
predict_dyn_obs_path/script/: predict_Kalman_based.py  predict_RLS_based.py
(+10 files in other folders)
