<?xml version="1.0"?>
<package format="2">
    <name>erp42_gazebo_manager</name>
    <version>0.0.0</version>
    <description>
        erp42 gazebo GUI-based interface
    </description>
    
    <maintainer email="sjnah@yonsei.ac.kr">djjin</maintainer>
    <author email="sjnah@yonsei.ac.kr">Sungjae Nah</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>ackermann_steering_controller</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>roslaunch</exec_depend>
    
    <exec_depend>erp42_gazebo_control</exec_depend>
    <exec_depend>erp42_vehicle_description</exec_depend>
    <exec_depend>erp42_hardware_gazebo</exec_depend>
    <exec_depend>erp42_drive_controller</exec_depend>
    <exec_depend>message_to_tf</exec_depend>
    <exec_depend>xacro</exec_depend>
    
</package>