<?xml version="1.0"?>
<package format="2">
  <name>erp42_navigation</name>
  <version>0.0.0</version>
  <description>The erp42_navigation package</description>

  <maintainer email="djjin@todo.todo">djjin</maintainer>

  <license>TODO</license>
  <exec_depend>move_base</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>global_planner</build_depend>
  <build_depend>multibot_layers</build_depend>
  <build_export_depend>global_planner</build_export_depend>
  <exec_depend>global_planner</exec_depend>
  <build_depend>dwa_local_planner</build_depend>
  <build_export_depend>dwa_local_planner</build_export_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <build_depend>teb_local_planner</build_depend>
  <build_export_depend>teb_local_planner</build_export_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>multibot_layers</exec_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
